bumped some plugin metadata